<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<groupId>net.sourceforge.owlapi</groupId>
	<artifactId>oppl2-parent</artifactId>
	<packaging>pom</packaging>
	<version>4.0.1</version>
	<name>OPPL 2 parent</name>
	<description>OPPL 2 is a language for querying and manipulating OWL ontologies</description>
	<url>https://github.com/owlcs/OPPL2</url>



	<issueManagement>
		<system>github</system>
		<url>https://github.com/owlcs/OPPL2/issues</url>
	</issueManagement>


	<licenses>
		<license>
			<name>GNU LGPL Version 3.0</name>
			<url>http://www.gnu.org/licenses/lgpl.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>luigiiannone</id>
			<name>Luigi Iannone</name>
			<email>luigiiannone@users.sourceforge.net</email>
		</developer>
		<developer>
			<id>ignazio1977</id>
			<name>Ignazio Palmisano</name>
			<email>ignazio1977@users.sourceforge.net</email>
		</developer>
		<developer>
			<id>elenimikro</id>
			<name>Eleni Mikroyanndi</name>
			<email>mikrohelen@gmail.com</email>
		</developer>
	</developers>

	<mailingLists>
		<mailingList>
			<name>OPPL Development Mailing list</name>
			<subscribe>https://lists.sourceforge.net/lists/listinfo/oppl2-user</subscribe>
			<unsubscribe>https://lists.sourceforge.net/lists/listinfo/oppl2-user</unsubscribe>
			<archive>https://sourceforge.net/p/oppl2/mailman/oppl2-user</archive>
			<post>oppl2-user@lists.sourceforge.net</post>
		</mailingList>
	</mailingLists>



	<organization>
		<name>The University of Manchester</name>
		<url>http://www.cs.manchester.ac.uk/</url>
	</organization>

	<profiles>

		<profile>
			<id>release</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<!-- We need the GPG Plugin to self-sign the jar files. A valid signature 
						for the jar files is a requirement for deploying to Maven Central. -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

	<build>
		<plugins>
			<!-- In the Compiler Plugin we specify the encoding and the compiler version. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- We need to configure the Source Plugin for deploying the sources. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- We need to configure the Javadoc Plugin for deploying the Javadocs -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- The Surefire Plugin is for error reporting. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<useFile>false</useFile>
					<printSummary>false</printSummary>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<!-- Specify the encoding of the source files. -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<!-- Parameters for the Source Code Management system. -->
	<scm>
		<connection>scm:git:git://github.com/owlcs/OPPL2.git</connection>
		<developerConnection>scm:git:git@github.com:owlcs/OPPL2.git</developerConnection>
		<url>https://github.com/owlcs/OPPL2</url>
	</scm>

	<dependencies>
		<dependency>
			<groupId>net.sourceforge.owlapi</groupId>
			<artifactId>owlapi-apibinding</artifactId>
			<version>5.1.4</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr-runtime</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.owlapi</groupId>
			<artifactId>jfact</artifactId>
			<version>5.0.1</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>net.sourceforge.owlapi</groupId>
					<artifactId>owlapi-distribution</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>4.1.0</version>
		</dependency>
	</dependencies>
	<modules>
		<module>oppl2</module>
		<module>oppl2patterns</module>
		<module>oppl2testcase</module>
		<module>oppl2templates</module>
		<module>oppl2plugin</module>
	</modules>
</project>
